--- a/android/内存泄漏&内存溢出.md
+++ b/android/内存泄漏&内存溢出.md
@@ -1,6 +1,6 @@
 # 内存泄漏&内存溢出
 
-####  1.什么是OOM & 什么是内存泄漏以及原因
+###   1.什么是OOM & 什么是内存泄漏以及原因
 
 
 **内存泄漏**
@@ -47,7 +47,7 @@
 
 
 
-####  2.Thread是如何造成内存泄露的，如何解决？
+###   2.Thread是如何造成内存泄露的，如何解决？
 
 垃圾回收器不会回收GC Roots以及那些被它们间接引用的对象
 
@@ -60,7 +60,7 @@
 该养成为thread设置退出逻辑条件的习惯。
 
 
-####  3. Handler导致的内存泄露的原因以及如何解决
+###   3. Handler导致的内存泄露的原因以及如何解决
  原因:1.Java中非静态内部类和匿名内部类都会隐式持有当前类的外部引用
 
 2.我们在Activity中使用非静态内部类初始化了一个Handler,
@@ -78,7 +78,7 @@
 
 2.当外部类结束生命周期时，清空Handler内消息队列
 
-####  4.如何加载Bitmap防止内存溢出
+###   4.如何加载Bitmap防止内存溢出
 
 
 1.对图片进行内存压缩；
@@ -90,7 +90,7 @@
 4.及时回收
 
 
-####  5.MVP中如何处理Presenter层以防止内存泄漏的
+###   5.MVP中如何处理Presenter层以防止内存泄漏的
 
 
 首先 MVP 会出现内存泄漏是因为 Presenter 层持有 View 对象，一般我们会把 Activity 做为 View 传递到 Presenter，Presenter 持有 View对象，Activity 退出了但是没有回收出现内存泄漏。
