--- a/android/序列化.md
+++ b/android/序列化.md
@@ -1,6 +1,6 @@
 # 序列化
 
-#### 1.什么是序列化,
+###  1.什么是序列化,
 
 
 Java序列化是指把Java对象转换为字节序列的过程
@@ -9,14 +9,14 @@ Java反序列化是指把字节序列恢复为Java对象的过程；
 
 
 
-####  2.为什么需要使用序列化和反序列化
+###   2.为什么需要使用序列化和反序列化
 
 
    不同进程/程序间进行远程通信时，可以相互发送各种类型的数据，包括文本、图片、音频、视频等，而这些数据都会以二进制序列的形式在网络上传送。
 
    当两个Java进程进行通信时，对于进程间的对象传送需要使用Java序列化与反序列化了。发送方需要把这个Java对象转换为字节序列，接收方则需要将字节序列中恢复出Java对象。
 
-####  3. 序列化的有哪些好处
+###   3. 序列化的有哪些好处
 
 实现了数据的持久化，通过序列化可以把数据永久地保存到硬盘上（如：存储在文件里），实现永久保存对象。
 
@@ -24,7 +24,7 @@ Java反序列化是指把字节序列恢复为Java对象的过程；
 
 
 
-####  4. Serializable 和 Parcelable 的区别
+### 4. Serializable 和 Parcelable 的区别
 
 
 
@@ -59,7 +59,7 @@ Parcelable 自已实现封送和解封（marshalled &unmarshalled）操作不需
 
 
 
-####  5.什么是serialVersionUID
+### 5.什么是serialVersionUID
 
 https://cloud.tencent.com/developer/article/1524781
 
@@ -72,7 +72,7 @@ https://cloud.tencent.com/developer/article/1524781
 虚拟机是否允许反序列化，不仅取决于类路径和功能代码是否一致，一个非常重要的一点是两个类的序列化 ID 是否一致，这个所谓的序列化ID，就是我们在代码中定义的serialVersionUID。
 
 
-####  6.为什么还要显示指定serialVersionUID的值?
+### 6.为什么还要显示指定serialVersionUID的值?
 
 如果不显示指定serialVersionUID, JVM在序列化时会根据属性自动生成一个serialVersionUID, 然后与属性一起序列化, 再进行持久化或网络传输. 在反序列化时, JVM会再根据属性自动生成一个新版serialVersionUID, 然后将这个新版serialVersionUID与序列化时生成的旧版serialVersionUID进行比较, 如果相同则反序列化成功, 否则报错.
 
