--- a/android/模块化&组件化.md
+++ b/android/模块化&组件化.md
@@ -1,6 +1,6 @@
 # 模块化&组件化
 
-####  1.什么是模块化
+###   1.什么是模块化
 
 原本一个 App模块 承载了所有的功能，而模块化就是拆分成多个模块放在不同的Module里面，每个功能的代码都在自己所属的 module 中添加
 
@@ -10,12 +10,12 @@
 
  但多个模块中肯定会有页面跳转、数据传递、方法调用 等情况，所以必然存在以上这种依赖关系，即模块间有着高耦合度。 高耦合度 加上 代码量大，就极易出现上面提到的那些问题了，严重影响了团队的开发效率及质量。
 
-####  2.什么是组件化
+###   2.什么是组件化
 
 组件化，去除模块间的耦合，使得每个业务模块可以独立当做App存在，对于其他模块没有直接的依赖关系。 此时业务模块就成为了业务组件。
 
 
-#### 3.组件化优点和方案
+###  3.组件化优点和方案
 
 加快编译速度：每个业务功能都是一个单独的工程，可独立编译运行，拆分后代码量较少，编译自然变快。
 
@@ -51,7 +51,7 @@ https://www.jianshu.com/p/8b6e6a50e21e
 
 https://juejin.cn/post/6844904147641171981#heading-5
 
-#### 4.组件独立调试
+###  4.组件独立调试
 
 1.1gradle.properties中定义一个常量值 isModule
 1.2  apply plugin根据boolean值判断
@@ -64,7 +64,7 @@ if (isModule.toBoolean()){
 
 
 
-#### 5.组件间通信
+###  5.组件间通信
 
 跳转
 
@@ -91,7 +91,7 @@ r 接口
 
 
 
-#### 6.Aplication动态加载
+###  6.Aplication动态加载
 
  组件有时候也需要获取应用的Application，也需要在应用启动时进行初始化。这就涉及到组件的生命周期管理问题。
 
@@ -149,7 +149,7 @@ init方法里找到 AppLifeCycleManager里的addClassFile()方法，我们在这
 
 
 
-#### 7.ARouter原理
+###  7.ARouter原理
 
 https://juejin.cn/post/6885932290615509000#heading-1
 
