--- a/android/热修复.md
+++ b/android/热修复.md
@@ -2,7 +2,7 @@
 
 
 
-####  1.热修复和插件化区别
+###   1.热修复和插件化区别
 
 插件化和热修复的原理，都是动态加载 dex／apk 中的类／资源，让宿主正常的加载和运行插件（补丁）中的内容。 两者的目的不同。
 
@@ -10,7 +10,7 @@
 
 热修复目标在修复已有的问题。重在解决替换已有的有问题的类／方法／资源等。
 
-####  2.热修复原理
+###   2.热修复原理
 
 
 代码修复主要有三个方案，分别是底层替换方案、类加载方案和Instant Run方案。
